# silence

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  export_game.bat  newFile.json  scene.json  test.json  vcpkg.json
asset_baker/: CMakeLists.txt  main.cpp  opengl_context.cpp  opengl_context.h
core/: CMakeLists.txt  class_map.h  pch.h  serialization.h  types.h
core/ai/state_machine/: base_state.h
core/assets/: CMakeLists.txt  animation_asset.cpp  animation_asset.h  asset_loader.cpp  asset_loader.h  material_asset.cpp  material_asset.h  mesh_asset.cpp  mesh_asset.h  model_asset.cpp  model_asset.h  prefab_asset.cpp  prefab_asset.h  skinned_mesh_asset.cpp  skinned_mesh_asset.h  skinned_model_asset.cpp  skinned_model_asset.h  texture_asset.cpp  texture_asset.h
core/behavior_tree/: behavior_tree.h  behavior_tree_builder.h  composite_node.h  decorator_node.h  leaf_node.h  tree_node.h
core/behavior_tree/composite_nodes/: selector_node.h  sequence_node.h
core/behavior_tree/decorator_nodes/: invert_node.h  repeater_node.h  retry_node.h
core/behavior_tree/leaf_nodes/: failure_leaf.h  success_leaf.h
core/camera/: camera.cpp  camera.h  frustum.cpp  frustum.h
core/components/: agent_data_component.h  animation_component.h  attachment_component.h  cable_parent_component.h  camera_component.h  checkpoint_component.h  children_component.h  collider_aabb.h  collider_capsule.h  collider_obb.h  collider_sphere.h  collider_tag_component.h  decal_component.h  detection_camera_component.h  dialogue_trigger_component.h  enemy_data_component.h  enemy_path_component.h  exploding_box_component.h  fmod_emitter_component.h  fmod_listener_component.h  gravity_component.h  hacker_data_component.h  highlight_component.h  interactable_component.h  light_component.h  light_switcher_component.h  main_door_component.h  main_menu_component.h  mesh_instance_component.h  name_component.h  on_destroy_interface.h  on_start_interface.h  parent_component.h  particle_emitter_component.h  path_node_component.h  path_parent_component.h  platform_component.h  rigidbody_component.h  rotator_component.h  state_component.h  (+5 more)
core/cvars/: cvars.cpp  cvars.h  string_utils.h
core/debug_camera/: debug_camera.cpp  debug_camera.h
core/input/: input.h  input_devices.h  input_key.h  input_manager.cpp  input_manager.h  multiplatform_input.cpp  multiplatform_input.h
core/state_machine/: state.h  state_machine.cpp  state_machine.h
core/state_machine/states/: state.h  test_state.cpp  test_state.h
editor/: CMakeLists.txt  IconsMaterialDesign.h  editor.cpp  editor.h  editor_scene.cpp  editor_scene.h  gui.cpp  inspector_gui.cpp  inspector_gui.h  main.cpp  scene.cpp  scene.h
engine/: CMakeLists.txt  engine.cpp  engine.h  scene.cpp  scene.h
game/: CMakeLists.txt  game.cpp  game.h  main.cpp  menu_demo.cpp  menu_demo.h  menu_test.cpp  menu_test.h
managers/: CMakeLists.txt  audio_manager.cpp  audio_manager.h  display_manager.cpp  display_manager.h  render_manager.cpp  render_manager.h
managers/ai/: CMakeLists.txt
managers/ai/state_machine/: state.h  state_machine.cpp  state_machine.h
managers/animation/: CMakeLists.txt  animation.cpp  animation.h  animation_manager.cpp  animation_manager.h  animator.cpp  animator.h  bone.cpp  bone.h  channel.cpp  channel.h  joint.h  pose.h  skinned_mesh.cpp  skinned_mesh.h  skinned_model.cpp  skinned_model.h
managers/animation/ecs/: animation_instance.cpp  animation_instance.h  animation_system.cpp  animation_system.h  attachment_system.cpp  (+1 more)
managers/audio/: CMakeLists.txt  adaptive_music_manager.cpp  adaptive_music_manager.h  audio_manager.cpp  audio_manager.h  event_reference.cpp  event_reference.h  fmod_listener.cpp  fmod_listener.h  fmod_listener_system.cpp  fmod_listener_system.h
managers/display/: CMakeLists.txt  display_manager.cpp  display_manager.h
managers/ecs/: CMakeLists.txt  base_system.h  component_array.h  component_array_interface.h  component_manager.h  component_visitor.h  ecs_manager.cpp  ecs_manager.h  entity_manager.cpp  entity_manager.h  json_deserializer.cpp  json_deserializer.h  parent_manager.cpp  parent_manager.h  query_builder.h  system_manager.h  world.cpp  world.h
managers/font/: CMakeLists.txt  font_manager.cpp  font_manager.h
managers/gameplay/: CMakeLists.txt  gameplay_manager.cpp  gameplay_manager.h
managers/input/: CMakeLists.txt  input_key.h  input_manager.cpp  input_manager.h
managers/opengl/: CMakeLists.txt  framebuffer.cpp  framebuffer.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  opengl_manager.cpp  opengl_manager.h  opengl_system.cpp  opengl_system.h  render_pass.cpp  render_pass.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h  utils.cpp  utils.h
managers/physics/: CMakeLists.txt  collider_components_factory.cpp  collider_components_factory.h  physics_manager.cpp  physics_manager.h  physics_system.cpp  physics_system.h
managers/render/: CMakeLists.txt  material.cpp  material_system.cpp  material_system.h  mesh.h  model.cpp  model_instance.h  render_manager.cpp  render_manager.h  render_pass.cpp  render_scene.cpp  render_scene.h  render_system.cpp  render_system.h  vk_debug.cpp  vk_debug.h  vk_descriptors.cpp  vk_descriptors.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_push_buffer.cpp  vk_push_buffer.h  vk_scene.cpp  vk_scene.h  vk_scene_render.cpp  vk_shaders.cpp  vk_shaders.h  vk_textures.cpp  vk_textures.h  vk_types.h
managers/rendering/: pipeline_builder.cpp  pipeline_builder.h  render_system.cpp  render_system.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_types.h
managers/resource/: CMakeLists.txt  resource_manager.cpp  resource_manager.h
managers/scene/: CMakeLists.txt  scene_manager.cpp  scene_manager.h
managers/systems/: base_system.h  isolated_entities_system.cpp  isolated_entities_system.h  parent_system.cpp  parent_system.h  physics_system.cpp  physics_system.h  root_parent_system.cpp  root_parent_system.h  state_machine_system.cpp  state_machine_system.h
(+1167 files in other folders)
